Phase 6 (Done), Tweaked some stuff to make it more cleaner, made a README file and made a clear class Diagram. Project is now finished and ready to be submitted